# imdb-to-todoist

./: .flake8  .gitignore  LICENSE  README.md  imdb_to_todoist.py  pyproject.toml
imdb_to_todoist/: configure.py  imdb.py  imdb_api.py  main.py  todoist.py
src/: configuration.py  configure.py  exceptions.py  get_movie.py  imdb.py  imdb_api.py  main.py  parse_input.py  todoist.py
tests/: test_get_movie.py  test_todoist.py
