[tool.poetry]
name = "imdb-to-todoist"
version = "0.1.0"
description = "Python script to quickly add a movie from IMDB to todoist as a task."
authors = ["KuSi833 <kabo.milicic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
IMDBAPI = "^1.0.2"
requests = "^2.28.1"
todoist-api-python = "^1.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
flake8 = "^4.0.1"
yapf = "^0.32.0"
toml = "^0.10.2"
pytest = "^7.1.2"

[tool.yapf]
based_on_style = "google"
spaces_before_comment = 4
split_before_logical_operator = true
align_closing_bracket_with_visual_indent = true
blank_line_before_nested_class_or_def = false
column_limit = 90

[tool.pytest.ini_options]
testpaths = [
    "tests",  # important to avoid large folders like env
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
